# iced_audio

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  UPGRADE.md  iced_audio.7z
.github/: FUNDING.yml
.github/workflows/: ci.yml  rust.yml
examples/: all_widgets.rs  basic_inputs.rs  h_slider.rs  inputs_tour.rs  knob.rs  mod_range.rs  ramp.rs  simple.rs  tour.rs  v_slider.rs  xy_pad.rs
examples/basic_inputs_steps/: mod.rs  step_h_sliders.rs  step_knobs.rs  step_ramps.rs  step_v_sliders.rs  step_xy_pads.rs  style.rs
examples/db_meter/: Cargo.toml
examples/db_meter/src/: main.rs
examples/inputs_tour/: Cargo.toml
examples/inputs_tour/src/: main.rs
examples/inputs_tour/src/steps/: mod.rs  step_h_sliders.rs  step_knobs.rs  step_mod_ranges.rs  step_ramps.rs  step_v_sliders.rs  step_xy_pads.rs
examples/inputs_tour/src/style/: button.rs  colors.rs  h_slider.rs  knob.rs  mod.rs  mod_range_input.rs  ramp.rs  v_slider.rs  xy_pad.rs
examples/inputs_tour_steps/: mod.rs  step_auto_ranges.rs  step_h_sliders.rs  step_knob_auto_ranges.rs  step_knobs.rs  step_mod_ranges.rs  step_ramps.rs  step_v_sliders.rs  step_xy_pads.rs  style.rs
examples/phase_meter/: Cargo.toml
examples/phase_meter/src/: main.rs
examples/reduction_meter/: Cargo.toml
examples/reduction_meter/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
examples/style/: colors.rs  h_slider.rs  knob.rs  mod.rs  mod_range_input.rs  ramp.rs  v_slider.rs  xy_pad.rs
examples/tour_steps/: mod.rs  step_h_sliders.rs  step_knobs.rs  step_v_sliders.rs  step_xy_pads.rs  style.rs
examples/util/: info_text.rs  mod.rs
src/: core.rs  lib.rs  style.rs  widget.rs
src/core/: knob_angle_range.rs  math.rs  mod.rs  modulation_range.rs  normal.rs  normal_param.rs  offset.rs  param.rs  range.rs  slider_status.rs  text_marks.rs  tick_marks.rs  virtual_slider.rs
src/core/text_marks/: group.rs  horizontal.rs  radial.rs  vertical.rs
src/core/tick_marks/: group.rs  horizontal.rs  radial.rs  tier.rs  vertical.rs
src/graphics/: bar_text_marks.rs  bar_tick_marks.rs  db_meter.rs  h_slider.rs  knob.rs  mod.rs  mod_range_input.rs  phase_meter.rs  ramp.rs  reduction_meter.rs  v_slider.rs  xy_pad.rs
src/graphics/text_marks/: horizontal.rs  mod.rs  radial.rs  vertical.rs
src/graphics/tick_marks/: horizontal.rs  mod.rs  radial.rs  vertical.rs
src/native/: auto_range_input.rs  db_meter.rs  h_slider.rs  knob.rs  mod.rs  mod_range_input.rs  phase_meter.rs  ramp.rs  reduction_meter.rs  text_marks.rs  tick_marks.rs  v_slider.rs  xy_pad.rs
src/native/db_meter/: peak.rs  peak_rms.rs
src/style/: auto_range_input.rs  bar_text_marks.rs  bar_tick_marks.rs  db_meter.rs  default_colors.rs  h_slider.rs  knob.rs  mod.rs  mod_range_input.rs  phase_meter.rs  ramp.rs  reduction_meter.rs  text_marks.rs  theme.rs  tick_marks.rs  v_slider.rs  xy_pad.rs
src/wgpu/: auto_range_input.rs  bar_text_marks.rs  bar_tick_marks.rs  db_meter.rs  h_slider.rs  knob.rs  mod.rs  mod_range_input.rs  phase_meter.rs  ramp.rs  reduction_meter.rs  v_slider.rs  xy_pad.rs
src/widget/: h_slider.rs  knob.rs  mod_range_input.rs  ramp.rs  v_slider.rs  xy_pad.rs
src/widget/h_slider/: draw.rs  state.rs  value_markers.rs
src/widget/knob/: bipolar_state.rs  draw.rs  knob_info.rs  state.rs  value_markers.rs
src/widget/v_slider/: draw.rs  state.rs  value_markers.rs
