[package]
name = "iced_audio"
version = "0.14.0"
authors = [
  "Billy Messenger <https://github.com/BillyDM>",
  "Michał Kalbarczyk <https://github.com/fazibear>"
]
license = "MIT"
edition = "2021"
keywords = ["iced", "gui", "audio", "vst", "lv2"]
categories = ["gui", "visualization"]
description = "An extension to the Iced GUI library with useful widgets for audio applications"
homepage = "https://github.com/iced-rs/iced_audio"
documentation = "https://docs.rs/iced_audio"
repository = "https://github.com/iced-rs/iced_audio"
readme = "README.md"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
iced = { version = "0.14.0", default-features = false, features = ["advanced", "canvas"] }

[dev-dependencies]
iced = { version = "0.14.0", default-features = true }

[features]
default = [
  "knob",
  "h_slider",
  "v_slider",
  "ramp",
  "xy_pad",
  "mod_range_input",
]
knob = []
h_slider = []
v_slider = []
ramp = []
xy_pad = []
mod_range_input = []
# Enables the texture (image) style for sliders.
texture = ["iced/image"]
