[package]
name = "iced_audio"
version = "0.13.1"
authors = [
  "Billy Messenger <https://github.com/BillyDM>",
  "Michał Kalbarczyk <https://github.com/fazibear>",
  "Oliver Rockstedt <https://github.com/sourcebox>",
]
license = "MIT"
edition = "2024"
keywords = ["iced", "audio", "plugin", "vst", "clap"]
categories = ["gui", "visualization"]
description = "An extension to the Iced GUI library with useful widgets for audio applications"
homepage = "https://github.com/iced-rs/iced_audio"
documentation = "https://docs.rs/iced_audio"
repository = "https://github.com/iced-rs/iced_audio"
readme = "README.md"

# Show documentation with all features enabled on docs.rs
[package.metadata.docs.rs]
all-features = true

[features]
default = ["all"]
all = [
  "knob",
  "h_slider",
  "v_slider",
  "ramp",
  "xy_pad",
  "mod_range_input",
]
knob = []
h_slider = []
v_slider = []
ramp = []
xy_pad = []
mod_range_input = []

[dependencies]
iced_core = { version = "0.14.0", default-features = false, features = [] }
iced_graphics = { version = "0.14.0", default-features = false, features = ["geometry"] }

[dev-dependencies]
iced = { version = "0.14.0", features = ["advanced", "canvas", "image"] }
