[package]
name = "db_meter"
version = "0.1.0"
authors = ["BillyDM <BillyMessenger8@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_audio = { path="../../" }
iced = { version = "0.1", features = ["canvas", "async-std", "debug"] }
iced_native = { version = "0.2" }
async-std = { version = "1.6", features = ["unstable"] }