[package]
name = "db_meter"
version = "0.1.0"
authors = ["BillyDM <BillyMessenger8@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_audio = { path="../../" }
iced = { git = "https://github.com/hecrj/iced", features=["canvas", "tokio"] }