[package]
name = "inputs_tour"
version = "0.1.0"
authors = ["Billy Messenger <BillyDM@protonmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.5.2", features=["image"] }
iced_audio = { path = "../../" }
iced_native = "0.6.1"
