[package]
name = "inputs_tour"
version = "0.1.0"
authors = ["Billy Messenger <BillyDM@protonmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.7", default-features = false, features = ["image"] }
iced_audio = { path = "../../", default-features = false }
iced_native = "0.8"

[features]
default = ["wgpu"]
glow = ["iced/glow", "iced_audio/glow"]
wgpu = ["iced/wgpu", "iced_audio/wgpu"]
