[package]
name = "phase_meter"
version = "0.1.0"
authors = ["Billy Messenger <60663878+BillyDM@users.noreply.github.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_audio = { path="../../" }
iced = { git = "https://github.com/hecrj/iced", features=["canvas", "tokio"] }