[package]
name = "reduction_meter"
version = "0.1.0"
authors = ["Billy Messenger <60663878+BillyDM@users.noreply.github.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_audio = { path="../../" }
iced = { version = "0.1", features = ["canvas", "async-std", "debug"] }
iced_native = { version = "0.2" }
async-std = { version = "1.6", features = ["unstable"] }