[package]
name = "simple"
version = "0.1.0"
authors = ["Billy Messenger <BillyDM@protonmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.5.2", default-features = false, features = ["image"] }
iced_audio = { path = "../.." }

[features]
default = ["wgpu"]
glow = ["iced_audio/glow"]
wgpu = ["iced_audio/wgpu"]
